// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`input decoding optional query and header params 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Item } from "./models.js";

const ItemsInput = {
  list: RequestDecoders.combine(
    [RequestDecoders.query("limit", Decoders.number.optional()), RequestDecoders.query("offset", Decoders.number.optional()), RequestDecoders.header("x-request-id", Decoders.string.optional())],
    (limit, offset, requestId) => ({ limit, offset, requestId }),
  ),
};

const ItemsOutput = {
  list: ResponseEncoders.json<Item[]>(200),
};

const ItemsErrors = {
  list: ErrorEncoders.json<never>(500),
};

export const ItemsOperations = {
  list: {
    endpoint: {
      service: { name: "ParamsApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "list",
        operationId: "Items.list",
        method: "GET" as const,
        path: "/items",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ limit?: number; offset?: number; requestId?: string }>(ItemsInput.list, request, pathParams),
    encodeOutput: (output: Item[]) => ItemsOutput.list.encode(output),
    encodeError: (error: never) => ItemsErrors.list.encode(error),
  } satisfies ServerOperation<{ limit?: number; offset?: number; requestId?: string }, never, Item[]>,

} as const;
"
`;

exports[`input decoding optional query and header params 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type {
  Item
} from "./models.js";

export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly list: OperationHandler<{ limit?: number; offset?: number; requestId?: string }, never, Item[], Ctx>;
}

export interface ParamsApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`input decoding validation decorators become runtime validators 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { CreateItem } from "./models.js";

const ItemsInput = {
  list: RequestDecoders.combine(
    [RequestDecoders.query("limit", Decoders.number.validate(Validators.minValue(1), Validators.maxValue(100))), RequestDecoders.query("ratio", Decoders.number.validate(Validators.minValueExclusive(0), Validators.maxValueExclusive(1)))],
    (limit, ratio) => ({ limit, ratio }),
  ),
  read: RequestDecoders.path("itemId", Decoders.bigint.validate(Validators.minValue(1n))).map((itemId) => ({ itemId })),
  create: Decoders.object<CreateItem>({
    "name": Decoders.string.validate(Validators.minLength(1), Validators.maxLength(20), Validators.pattern("^[A-Z].*", "Must start with uppercase.")),
    "tags": Decoders.strictArray(Decoders.string).validate(Validators.minItems(1), Validators.maxItems(3)),
    "count": Decoders.number.validate(Validators.minValue(0)),
  }),
};

const ItemsOutput = {
  list: ResponseEncoders.json<CreateItem[]>(200),
  read: ResponseEncoders.json<CreateItem>(200),
  create: ResponseEncoders.json<CreateItem>(200),
};

const ItemsErrors = {
  list: ErrorEncoders.json<never>(500),
  read: ErrorEncoders.json<never>(500),
  create: ErrorEncoders.json<never>(500),
};

export const ItemsOperations = {
  list: {
    endpoint: {
      service: { name: "ValidationApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "list",
        operationId: "Items.list",
        method: "GET" as const,
        path: "/items",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ limit: number; ratio: number }>(ItemsInput.list, request, pathParams),
    encodeOutput: (output: CreateItem[]) => ItemsOutput.list.encode(output),
    encodeError: (error: never) => ItemsErrors.list.encode(error),
  } satisfies ServerOperation<{ limit: number; ratio: number }, never, CreateItem[]>,

  read: {
    endpoint: {
      service: { name: "ValidationApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "read",
        operationId: "Items.read",
        method: "GET" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: bigint }>(ItemsInput.read, request, pathParams),
    encodeOutput: (output: CreateItem) => ItemsOutput.read.encode(output),
    encodeError: (error: never) => ItemsErrors.read.encode(error),
  } satisfies ServerOperation<{ itemId: bigint }, never, CreateItem>,

  create: {
    endpoint: {
      service: { name: "ValidationApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "create",
        operationId: "Items.create",
        method: "POST" as const,
        path: "/items",
        hints: emptyHints(),
      },
    },
    decodeInput: async (request) =>
      decodeJsonBody<CreateItem>(request, ItemsInput.create),
    encodeOutput: (output: CreateItem) => ItemsOutput.create.encode(output),
    encodeError: (error: never) => ItemsErrors.create.encode(error),
  } satisfies ServerOperation<CreateItem, never, CreateItem>,

} as const;
"
`;

exports[`input decoding path + query + body combined 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { Item, UpdatePayload } from "./models.js";

const ItemsInput = {
  updateRequest: RequestDecoders.combine(
    [RequestDecoders.path("itemId", Decoders.string), RequestDecoders.query("dryRun", Decoders.boolean.optional())],
    (itemId, dryRun) => ({ itemId, dryRun }),
  ),
  updateBody: Decoders.object<UpdatePayload>({
    "name": Decoders.string,
    "tags": Decoders.optional(Decoders.strictArray(Decoders.string)),
  }),
};

const ItemsOutput = {
  update: ResponseEncoders.json<Item>(200),
};

const ItemsErrors = {
  update: ErrorEncoders.json<never>(500),
};

export const ItemsOperations = {
  update: {
    endpoint: {
      service: { name: "CombinedApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "update",
        operationId: "Items.update",
        method: "PUT" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: async (request, pathParams) =>
      decodeRequestInputAndBody<{ itemId: string; dryRun?: boolean }, UpdatePayload>(ItemsInput.updateRequest, ItemsInput.updateBody, request, pathParams),
    encodeOutput: (output: Item) => ItemsOutput.update.encode(output),
    encodeError: (error: never) => ItemsErrors.update.encode(error),
  } satisfies ServerOperation<{ itemId: string; dryRun?: boolean; name: string; tags?: string[] }, never, Item>,

} as const;
"
`;
